ParGramatyka.y
-- This Happy file was machine-generated by the BNF converter
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
module ParGramatyka where
import AbsGramatyka
import LexGramatyka
import ErrM

}

%name pProgram Program
-- no lexer declaration
%monad { Err } { thenM } { returnM }
%tokentype {Token}
%token
  '!' { PT _ (TS _ 1) }
  '!=' { PT _ (TS _ 2) }
  '%' { PT _ (TS _ 3) }
  '&&' { PT _ (TS _ 4) }
  '(' { PT _ (TS _ 5) }
  ')' { PT _ (TS _ 6) }
  '*' { PT _ (TS _ 7) }
  '+' { PT _ (TS _ 8) }
  '++' { PT _ (TS _ 9) }
  ',' { PT _ (TS _ 10) }
  '-' { PT _ (TS _ 11) }
  '--' { PT _ (TS _ 12) }
  '->' { PT _ (TS _ 13) }
  '/' { PT _ (TS _ 14) }
  ';' { PT _ (TS _ 15) }
  '<' { PT _ (TS _ 16) }
  '<=' { PT _ (TS _ 17) }
  '=' { PT _ (TS _ 18) }
  '==' { PT _ (TS _ 19) }
  '>' { PT _ (TS _ 20) }
  '>=' { PT _ (TS _ 21) }
  '[' { PT _ (TS _ 22) }
  '\\' { PT _ (TS _ 23) }
  ']' { PT _ (TS _ 24) }
  'break' { PT _ (TS _ 25) }
  'const' { PT _ (TS _ 26) }
  'continue' { PT _ (TS _ 27) }
  'def' { PT _ (TS _ 28) }
  'else' { PT _ (TS _ 29) }
  'error' { PT _ (TS _ 30) }
  'false' { PT _ (TS _ 31) }
  'for' { PT _ (TS _ 32) }
  'honk' { PT _ (TS _ 33) }
  'if' { PT _ (TS _ 34) }
  'in' { PT _ (TS _ 35) }
  'lambda' { PT _ (TS _ 36) }
  'printInt' { PT _ (TS _ 37) }
  'printStr' { PT _ (TS _ 38) }
  'return' { PT _ (TS _ 39) }
  'to' { PT _ (TS _ 40) }
  'true' { PT _ (TS _ 41) }
  'while' { PT _ (TS _ 42) }
  '{' { PT _ (TS _ 43) }
  '||' { PT _ (TS _ 44) }
  '}' { PT _ (TS _ 45) }
  L_ident  { PT _ (TV $$) }
  L_integ  { PT _ (TI $$) }
  L_quoted { PT _ (TL $$) }

%%

Ident   :: { Ident }
Ident    : L_ident  { Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read ( $1)) :: Integer }

String  :: { String }
String   : L_quoted {  $1 }

Program :: { Program }
Program : ListTopDef { AbsGramatyka.Program $1 }
TopDef :: { TopDef }
TopDef : 'def' Ident '(' ListArg ')' Block { AbsGramatyka.FnDef $2 $4 $6 }
ListTopDef :: { [TopDef] }
ListTopDef : TopDef { (:[]) $1 } | TopDef ListTopDef { (:) $1 $2 }
Arg :: { Arg }
Arg : Ident { AbsGramatyka.Arg $1 }
    | 'const' Ident { AbsGramatyka.CntsArg $2 }
ListArg :: { [Arg] }
ListArg : {- empty -} { [] }
        | Arg { (:[]) $1 }
        | Arg ',' ListArg { (:) $1 $3 }
Block :: { Block }
Block : '{' ListStmt '}' { AbsGramatyka.Block (reverse $2) }
ListStmt :: { [Stmt] }
ListStmt : {- empty -} { [] } | ListStmt Stmt { flip (:) $1 $2 }
Stmt :: { Stmt }
Stmt : ';' { AbsGramatyka.Empty }
     | Block { AbsGramatyka.BStmt $1 }
     | 'const' Ident '=' Expr { AbsGramatyka.DeclCon $2 $4 }
     | 'def' Ident '(' ListArg ')' Block { AbsGramatyka.DeclFun $2 $4 $6 }
     | Ident '=' Expr ';' { AbsGramatyka.Ass $1 $3 }
     | Ident '=' '(' ListExpr ')' ';' { AbsGramatyka.TupleAss $1 $4 }
     | '(' ListArg ')' '=' '(' ListExpr ')' ';' { AbsGramatyka.TupleAss1 $2 $6 }
     | '(' ListArg ')' '=' Expr ';' { AbsGramatyka.TupleAss2 $2 $5 }
     | Ident '++' ';' { AbsGramatyka.Incr $1 }
     | Ident '--' ';' { AbsGramatyka.Decr $1 }
     | 'return' Expr ';' { AbsGramatyka.Ret $2 }
     | 'return' '(' ListExpr ')' ';' { AbsGramatyka.RetTuple $3 }
     | 'return' ';' { AbsGramatyka.VRet }
     | 'if' '(' Expr ')' Stmt { AbsGramatyka.Cond $3 $5 }
     | 'if' '(' Expr ')' Stmt 'else' Stmt { AbsGramatyka.CondElse $3 $5 $7 }
     | 'while' '(' Expr ')' Stmt { AbsGramatyka.While $3 $5 }
     | 'for' '(' Ident '=' Expr 'to' Expr ')' Stmt { AbsGramatyka.For $3 $5 $7 $9 }
     | 'for' '(' Ident 'in' Ident ')' Stmt { AbsGramatyka.ForIn $3 $5 $7 }
     | 'break' { AbsGramatyka.Break }
     | 'continue' { AbsGramatyka.Conti }
     | Expr ';' { AbsGramatyka.SExp $1 }
     | 'printInt' '(' Expr ')' { AbsGramatyka.PrInt $3 }
     | 'printStr' '(' Expr ')' { AbsGramatyka.PrStr $3 }
     | 'honk' '(' Expr ')' { AbsGramatyka.Honk $3 }
     | 'error' '(' ')' { AbsGramatyka.Error }
Expr7 :: { Expr }
Expr7 : Ident { AbsGramatyka.EVar $1 }
      | Integer { AbsGramatyka.ELitInt $1 }
      | 'true' { AbsGramatyka.ELitTrue }
      | 'false' { AbsGramatyka.ELitFalse }
      | Ident '(' ListExpr ')' { AbsGramatyka.EApp $1 $3 }
      | String { AbsGramatyka.EString $1 }
      | '[' ListExpr ']' { AbsGramatyka.EList $2 }
      | '[' Expr ']' '*' Expr { AbsGramatyka.EList1 $2 $5 }
      | Ident '[' Expr ']' { AbsGramatyka.EAt $1 $3 }
      | '(' Expr ')' { $2 }
Expr6 :: { Expr }
Expr6 : '-' Expr7 { AbsGramatyka.Neg $2 }
      | '!' Expr7 { AbsGramatyka.Not $2 }
      | Expr7 { $1 }
Expr5 :: { Expr }
Expr5 : Expr5 MulOp Expr6 { AbsGramatyka.EMul $1 $2 $3 }
      | Expr6 { $1 }
Expr4 :: { Expr }
Expr4 : Expr4 AddOp Expr5 { AbsGramatyka.EAdd $1 $2 $3 }
      | Expr5 { $1 }
Expr3 :: { Expr }
Expr3 : Expr3 RelOp Expr4 { AbsGramatyka.ERel $1 $2 $3 }
      | Expr4 { $1 }
Expr2 :: { Expr }
Expr2 : Expr3 '&&' Expr2 { AbsGramatyka.EAnd $1 $3 } | Expr3 { $1 }
Expr1 :: { Expr }
Expr1 : Expr2 '||' Expr1 { AbsGramatyka.EOr $1 $3 } | Expr2 { $1 }
Expr :: { Expr }
Expr : '\\' ListArg '->' Block { AbsGramatyka.ELambda $2 $4 }
     | 'lambda' ListArg '->' Block { AbsGramatyka.ELambdaS $2 $4 }
     | Expr1 { $1 }
ListExpr :: { [Expr] }
ListExpr : {- empty -} { [] }
         | Expr { (:[]) $1 }
         | Expr ',' ListExpr { (:) $1 $3 }
AddOp :: { AddOp }
AddOp : '+' { AbsGramatyka.Plus } | '-' { AbsGramatyka.Minus }
MulOp :: { MulOp }
MulOp : '*' { AbsGramatyka.Times }
      | '/' { AbsGramatyka.Div }
      | '%' { AbsGramatyka.Mod }
RelOp :: { RelOp }
RelOp : '<' { AbsGramatyka.LTH }
      | '<=' { AbsGramatyka.LE }
      | '>' { AbsGramatyka.GTH }
      | '>=' { AbsGramatyka.GE }
      | '==' { AbsGramatyka.EQU }
      | '!=' { AbsGramatyka.NE }
{

returnM :: a -> Err a
returnM = return

thenM :: Err a -> (a -> Err b) -> Err b
thenM = (>>=)

happyError :: [Token] -> Err a
happyError ts =
  Bad $ "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ id(prToken t) ++ "'"

myLexer = tokens
}
